补上规则管理页面(功能 17),并修掉两个参数呈现的缺陷
后端菜单、权限码与 /api/v1/rules 接口一直都在,缺的只是前端页面与路由 ——
点侧边栏「数据集成 › 规则管理」落 404。现在补齐。

frontend:新增 types/rule.ts、api/rule.ts、views/integration/RuleListView.vue
与一条路由。

参数表单由后端下发的 paramSpec 渲染,不硬编码九种规则各有哪些字段 ——
这是后端 RuleKindInfo 上写明的设计意图:加一种规则时只改后端枚举,界面
自动跟上。页面只做三件后端做不了的事:

  · 说明里枚举了取值的参数渲染成下拉(mode 的 PARTIAL/HASH/FIXED、
    TRIM 的 BOTH/LEADING/TRAILING、true/false),认不出来就退回文本框
  · 被任务引用的规则,删除按钮就地禁用并说明为什么,而不是让用户点下去
    吃一个 409
  · 必填参数缺失时就地拦住并点名,而不是提交后吃 400

修掉的第一个缺陷:自由文本参数被误判成下拉

  maskChar 的说明是 "PARTIAL / FIXED:替换字符,默认 *" —— 那个斜杠分隔的是
  <b>适用模式</b>,不是取值。第一版的识别只要求"以大写词开头",于是把它渲染
  成了 PARTIAL/FIXED 下拉,用户想填的 * 或 # 从此填不进去。

  这正是我在那个函数的注释里警告过的情形("宁可少认,不可认错"),然后照样
  犯了。改成每一段都必须<b>整段</b>是一个全大写标识符(可带一个括号说明)。

修掉的第二个缺陷:参数顺序在两台机器上可能不同

  RuleKind.paramSpec() 返回 Map.copyOf(...),而 Map.copyOf 产出的是<b>无序</b>
  不可变映射 —— 构造时用 LinkedHashMap 保住的声明顺序,在这里又被扔掉一次。
  接口实测返回的 MASK 参数是 [keepPrefix, saltCredentialId, mode, keepSuffix,
  maskChar],mode 排到第三位。

  而这些参数在源码里本来是按"先决定语义的、再细化的"顺序写的:脱敏的 mode
  必须排第一,其余四个参数的含义全都取决于它。用户在还不知道自己选的是哪种
  模式时,就要先填 keepPrefix。

  改成 Collections.unmodifiableMap(不可变性照给,顺序留住);Map.of 也换成
  保序的构造。现在九种规则的参数全部按声明顺序返回。

verify:scripts/verify-rules-page.mjs,19 条断言全绿

  从<b>点侧边栏菜单</b>开始,不猜 URL —— 当初就是靠点菜单才发现 404 的,
  而 verify-ui.mjs 82 条断言全绿却漏了它,因为那个脚本一直用硬编码 URL 跳转。
  脚本自带时间戳命名与自清理,可反复执行。

  写它时自己踩的三个坑也修了:filter(hasText:'PARTIAL') 会先命中 maskChar
  而不是 mode;el-dialog 关闭后元素仍留在 DOM 里,要判可见而不是存在;
  规则名有唯一约束,不带时间戳的脚本第二次跑就会因重名而卡在对话框里。

回归:mvn test、vue-tsc、verify-p1/p2/p5、verify-ui(82 条)全部通过。
手册里那段「已知问题」换成了两张新页面的截图与说明。

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01WNc7RA7TRpXzaTmC58U1RA